enable preview for running